fix: Switch to dark mode in `style.css`

--- a/demo/assets/style.css
+++ b/demo/assets/style.css
@@ -1,8 +1,6 @@
 
-audio-describe-controller,
-X_sead-player {
-  background-color: #eee;
-  border: 1px solid #ddd;
+audio-describe-controller {
+  border: 1px solid #444;
   border-radius: .2rem;
   display: block;
   margin: 2rem 0;
@@ -13,8 +11,8 @@ X_sead-player {
   }
 
   &::part(label) {
-    background-color: #fafafa;
-    border: 1px outset silver;
+    background-color: #333;
+    border: 1px solid gray;
     border-radius: .2rem;
     display: inline-block;
     padding: .6rem;
@@ -32,15 +30,20 @@ voice-select {
   min-width: 1rem;
 
   &[ data-state = no-support ] {
-    outline: 3px dotted darkorange;
+    outline: 3px dotted yellow;
   }
 
   &[ data-state = no-voices ] {
-    outline: 2px solid red;
+    outline: 2px solid pink;
   }
 
   &[ data-ready ] {
-    outline: 1px dotted darkgreen;
+    outline: 1px dotted #1b2;
+  }
+
+  &::part(select) {
+    background-color: #f6f6f6;
+    border-radius: .2rem;
   }
 }
 
@@ -75,6 +78,7 @@ media-controller {
 
 h1 {
   font-size: 1.7rem;
+  font-weight: normal;
 }
 
 main {
@@ -82,15 +86,21 @@ main {
 }
 
 footer {
-  border-top: 2px solid silver;
+  border-top: 2px solid gray;
   margin-top: 4rem;
 }
 
 body {
+  background-color: #222;
+  color: #eee;
   font-family: sans-serif;
   margin: auto;
   max-width: 43rem;
   padding: 0 1rem;
+
+  a[ href ] {
+    color: #6bf;
+  }
 }
 
 * {
